# mello-android

./: .env.example  .gitignore  CLAUDE.md  app.config.js  app.json  eas.json  env  jest.config.js  package-lock.json  package.json  polyfills.ts
.claude/: settings.json  settings.local.json  welcome.md
__mocks__/: expo-constants.ts  expo-crypto.ts
__tests__/: composeDeterministicProfile.test.ts  greetings.test.ts  validateProfile.test.ts
api/: client.ts  endpoints.ts  index.ts  types.ts
app/: _layout.tsx  change-password.tsx  index.tsx
call agent test/: .env.example  README.md  cli_test.py  requirements.txt  server.py
config/: env.ts
constants/: colors.ts  spacing.ts  typography.ts
contexts/: AuthContext.tsx
docs/: ANDROID_TEXT_CROPPING_NOTE.md  API_ENDPOINTS.md  BACKEND_API.md  BACKEND_GOD_TABLE_ISSUE.md  CHAT_SCHEMA.sql  GOOGLE_OAUTH_IMPLEMENTATION.md  MELLO_VIBE_CODING_CONTEXT.md  ONBOARDING_FLOW.md  ONBOARDING_STORAGE.md  OVERNIGHT_RECAP.md  PRACTICES_OVERVIEW.md  STYLE_GUIDE.md  onboarding table schema.md  onboarding-questions.md
lib/: supabase.ts
phone-agent/: .env.example  .gitignore  ARCHITECTURE.md  README.md  bot.py  bot_hume_evi.py  modification.md  prd.json  pyproject.toml  server.py
plugins/: with-android-light-theme.js
rules/: README.md  android-text-cropping.md  audit-via-search.md  page-design.md  routing.md
scripts/: check-android-theme.mjs
utils/: affirmations.ts  avatarEmoji.ts  chatNavStore.ts  crisisContextStore.ts  crisisDetection.ts  crisisResumeStore.ts  emotionalBattery.ts  emotionalProfileCache.ts  fullscreenStore.ts  (+8 more)
(+292 files in other folders)
